--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.0.0",
-    "react-native": "0.69.1"
+    "react-native": "0.69.1",
+    "react-native-audio-recorder-player": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
