--- a/frontend/ios/AnyTalk/Info.plist
+++ b/frontend/ios/AnyTalk/Info.plist
@@ -37,6 +37,8 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>${PRODUCT_NAME} wants to have access to microphone</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,6 +53,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSMicrophoneUsageDescription</key> <string>${PRODUCT_NAME} wants to have access to microphone</string>
 </dict>
 </plist>
