--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-audio-recorder-player": "^3.5.1",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
     "react-native-sound-player": "^0.13.0"
   },
   "devDependencies": {
